--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ body {
 }
 
 #container_puntos{
-    margin-left: 70px;
-    margin-right: 70px;
+
+    background-color: #13847E;
+    width: 1141px;
+    height: 717px;
+}
+
+.circulo{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%; /* Hace que el elemento sea un círculo */
+    background-color: white; /* Color del círculo */
+    margin: 0 20px; /* Espacio entre círculos */
 }
