--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 #container_principal{
     background-color: #13847E;
     width: 1141px;
-    height: 717px;
+    height: full;
 }
 
 .circle{
