--- a/PAGINA_1/nav/nav.css
+++ b/PAGINA_1/nav/nav.css
@@ -1,11 +1,10 @@
+#nav{
+    
+}
 #nav_texto{
     color: #ffffff;
     margin-block-start: 10px;
     margin-block-end: 10px;
-}
-
-#navHome{
-    
 }
 
 #nav_conceptos,
