--- a/PAGINA_1/styles.css
+++ b/PAGINA_1/styles.css
@@ -1,12 +1,23 @@
 body {
     background-color: #3D494E !important;
+    max-height: 712px;
 }
 
 #container_principal{
     background-color: #13847E;
     width: 1141px;
 }
+#row_1{
+    transform: translate(0px, 166px);
+}
+#row_2{
+    transform: translate(0px, 544px);
+}
 
+.col{
+    display: flex;
+    justify-content: center;
+}
 .circle{
     width: 50px;
     height: 50px;
@@ -26,5 +37,9 @@ body {
     #container_principal{
         width: 90%;
         height: auto;
+    }
+    .circle{
+        width: 20px;
+        height: 20px;
     }
 }
