--- a/PAGINA_2/styles.css
+++ b/PAGINA_2/styles.css
@@ -66,7 +66,22 @@ nav{
     color: white;
     }
 
+h2 { 
+    color: white;
+}
 
+
+    .contenedor-imagenes {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+        gap: 10px; 
+        justify-content: center; 
+    }
+    
+    .contenedor-imagenes img {
+        max-width: 100%; 
+        height: auto; 
+    }
 
 @media (max-width: 1024px){
     #container_principal{
