--- a/PAGINA_2/css/patronesoscuros.css
+++ b/PAGINA_2/css/patronesoscuros.css
@@ -1,20 +1,14 @@
 body {
-    background-color: #3D494E !important;
-    color: #13847E;
+    background-color: #0E1720 !important;
     margin: 0; 
     padding: 0;
     font-family: "Bebas Neue", sans-serif;
 }
 
 #container_principal{
+    min-height: 100vh;
     background-color: #ffffff;
-    border: 20px solid #0E1720;
-    margin-left:auto;
-    margin-right:auto;
-    width: 1200px;
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 #categorias h3{
@@ -35,24 +29,26 @@ body {
     text-align: center;
 }
 
-  @media screen and (max-width: 768px) {
-  .cuadro {
-    width: calc(50% - 20px); 
-  }
-  }
+@media (max-width: 375.98px) {
 
-  @media (max-width: 1024px){
-  #container_principal{
-    width: 80%;
-    height: auto;
-  }
-  }
-  @media (max-width: 425px){
-  #container_principal{
-    width: 90%;
-    height: auto;
-  }
-  h3{
-    font-size:larger;
-  }
-  }
+}
+
+@media (max-width: 575.98px) {
+
+}
+
+@media (max-width: 767.98px) {
+
+}
+
+@media (max-width: 991.98px) {
+
+}
+
+@media (max-width: 1199.98px) {
+
+}
+
+@media (max-width: 1399.98px) {
+
+}
