--- a/PAGINA_2/styles.css
+++ b/PAGINA_2/styles.css
@@ -1,7 +1,8 @@
 body {
     background-color: #0E1720 !important;
-    max-height: 712px;
     font-family: "Bebas Neue", sans-serif;
+    margin: 0; 
+    padding: 0;
 }
 
 h1{
@@ -12,7 +13,8 @@ h1{
 
 /* CIRCULOS */
 #container_principal{
-    height: 1281px;
+    height: 1080px;
+    min-height: 100vh;
 }
 
 #row_circulos_1{
@@ -24,23 +26,20 @@ h1{
 
 #col_circulos{
     display: flex;
-    justify-content: center;
 }
 
 .circle{
     width: 50px;
     height: 50px;
-    border-radius: 50%; /* Hace que el elemento sea un círculo */
-    background-color: white; /* Color del círculo */
-    margin: 20px; /* Espacio entre círculos */
+    border-radius: 50%; 
+    background-color: white; 
+    margin: 20px;
 
 }
 
-/* franja_1 */
 #franja_1{
-    height: 299px;
-    width: 100%;
     max-width: 100%;
+    height: 299px;
     display: flex;
     justify-content: center;
     padding: 0px;
@@ -60,23 +59,18 @@ h1{
 
 /* textocentral */
 #textocentral {
-    width: 602px;
-    height: 150px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    max-width: 600px; /* Establecemos un ancho máximo */
+    margin: 50px auto; /* Centramos vertical y horizontalmente */
+    padding: 0 20px; /* Añadimos un poco de espacio interno */
+    text-align: center; /* Centramos el texto */
 }
 
-#textocentral p{
-    margin: 0px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    font-size: 20px;
+#textocentral p {
     color: white;
+    font-size: 22px;
+    line-height: 1.5; /* Ajustamos el espaciado entre líneas */
 }
+
 
 /* texto diseño */
 #texto_diseño{
@@ -91,7 +85,7 @@ h1{
 }
 
 #texto_diseño p{
-    width: 492px;
+    max-width: 492px;
     font-size: 22px;
 }
 
@@ -107,7 +101,6 @@ h1{
 #franja_2{
     display: flex;
     height: 200px;
-    width: 100%;
     max-width: 100%;
     align-items: center;
     padding: 0px;
@@ -131,8 +124,9 @@ h1{
 }
 
 /* objetivo */
-#objetivo{
+#objetivo {
     color: white;
+
 }
 
 #objetivo h2{
@@ -140,11 +134,11 @@ h1{
     font-size: 70px;
     color: #A3D4D2;
     display: flex;
-    justify-content: center;
 }
 
 #objetivo #texto{
     margin: 10%;
+
 }
 
 #objetivo .col{
@@ -170,27 +164,40 @@ h1{
     font-size: 18px;
 }
 
-@media (max-width: 1024px){
-    #container_principal{
-        width: 80%;
-        height: auto;
+@media (max-width: 375.98px) {
+    #franja_2_contenido{
+        max-width: 181px;
+        height: 111px;
+    }
+    #textocentral p{
+        color: white;
+        font-size: 30px;
     }
 }
 
-@media (max-width: 768px){
-    #container_principal{
-        width: 80%;
-        height: auto;
+@media (max-width: 575.98px) {
+    #franja_2_contenido{
+        max-width: 181px;
+        height: 111px;
+    }
+    #textocentral p{
+        color: white;
+        font-size: 10px;
     }
 }
 
-@media (max-width: 425px){
-    #container_principal{
-        width: 90%;
-        height: auto;
-    }
-    .circle{
-        width: 20px;
-        height: 20px;
-    }
+@media (max-width: 767.98px) {
+
+}
+
+@media (max-width: 991.98px) {
+
+}
+
+@media (max-width: 1199.98px) {
+
+}
+
+@media (max-width: 1399.98px) {
+
 }
