--- a/PAGINA_2/footer/footer.css
+++ b/PAGINA_2/footer/footer.css
@@ -8,8 +8,10 @@ footer{
 
 .row .col-4 h3{
     font-size: 30px;
+    margin-top: 100px;
 }
 .row .col-4 p{
+    font-family: "Nunito Sans", sans-serif;
     width: 355.07px;
     height: 72px;
     font-size: 18px;
@@ -17,8 +19,10 @@ footer{
 
 .row .col-2 h3{
     font-size: 22px;
+    margin-top: 100px;
 }
 .row .col-2 h4{
+    font-family: "Nunito Sans", sans-serif;
     font-size: 18px;
 }
 
