--- a/PAGINA_2/styles.css
+++ b/PAGINA_2/styles.css
@@ -34,14 +34,37 @@ h1{
     display: flex;
 }
 
-.circle{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%; 
-    background-color: white; 
-    margin: 20px;
+#rectangulo_1 h3,
+#rectangulo_2 h3,
+#rectangulo_3 h3,
+#rectangulo_4 h3,
+#rectangulo_5 h3,
+#rectangulo_6 h3{
 
+    color: #0E1720;
+    text-align: center;
+    justify-content: center;
+    margin-top: 5px;
 }
+
+#rectangulo_1,
+#rectangulo_2,
+#rectangulo_3,
+#rectangulo_5 {
+
+    width: 120px; /* Ancho del rectángulo */
+    height: 40px; /* Altura del rectángulo */
+    background-color: #A3D4D2; /* Color de fondo del rectángulo */
+    border-radius: 20px; /* Eliminar bordes redondeados para hacerlo un rectángulo */
+}
+
+.rectangulo {
+    width: 120px; /* Ancho del rectángulo */
+    height: 80px; /* Altura del rectángulo */
+    background-color: #A3D4D2; /* Color de fondo del rectángulo */
+    border-radius: 20px; /* Eliminar bordes redondeados para hacerlo un rectángulo */
+}
+
 
 #franja_1{
     max-width: 100%;
