--- a/PAGINA_2/nav/nav.css
+++ b/PAGINA_2/nav/nav.css
@@ -20,6 +20,7 @@
 #nav_acerca {
     color: #ffffff;
     font-size: 30px;
+    padding-left: 30px;
 }
 .dropdown-menu {
     background-color: #A5D7D7;
