--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: "Bebas Neue", sans-serif;
     margin: 0; 
     padding: 0;
-    background-image: url("/PAGINA_2/img/fondo1.jpg");
+    background-image: url("/img/fondo1.jpg");
     background-size: contain;
     background-size: 1940px;
     background-repeat: no-repeat;
