--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -1,9 +1,14 @@
 body {
     background-color: #0E1720 !important;
     margin: 0; 
-    padding: 0;
     color: #13847E;
     font-family: "Bebas Neue", sans-serif;
+}
+.navbar{
+  background-color: #0D5552;
+}
+main{
+  margin-bottom: 24px;
 }
 
 .rectangulopestaña {
@@ -20,7 +25,7 @@ body {
     min-height: 100vh;
     background-color: #ffffff;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 0px;
 }
 
 #containertitulo h2{
@@ -95,11 +100,6 @@ body {
   margin-bottom: 30px;
 }
 
-#contenido-manipulacion #more{
-  
-}
-
-
 /* Estilo del triángulo */
 .triangulo {
   display: inline-block;
@@ -110,15 +110,6 @@ body {
   border-bottom: 5px solid #000; /* Cambia el color del triángulo si lo deseas */
   margin-left: 5px; /* Ajusta el margen según sea necesario */
   cursor: pointer;
-}
-
-.rectangulocierre {
-  max-width: 100%;
-  height: 40px; 
-  background-color: #0E1720;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
 }
 
 @media (max-width: 375.98px) {
