--- a/nav/nav.css
+++ b/nav/nav.css
@@ -1,8 +1,8 @@
 .navbar{
     font-family: "Bebas Neue", sans-serif;
     height: 170px;
-    margin-left: 100px;
-    margin-right: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
     display: flex;
 }
 
