--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -78,7 +78,8 @@ main{
   margin-bottom: 20px;
 }
 
-#contenido-manipulacion h2{
+#contenido-manipulacion #contenido-emocional,
+ h2{
   font-size: 50;
   margin-left: 0%;
 }
@@ -93,12 +94,14 @@ main{
   font-size: 33;
 }
 
-#contenido-manipulacion #cuado_interactivo{
+#contenido-manipulacion #contenido-emocional,
+ #cuado_interactivo{
   background-color: #13847E;
   max-width: 550px;
   height: 350px;
   margin-bottom: 30px;
 }
+
 
 /* Estilo del triángulo */
 .triangulo {
