--- a/css/patrones.css
+++ b/css/patrones.css
@@ -2,6 +2,7 @@ body{
     background-color: #0E1720 !important;
     margin: 0; 
     padding: 0;
+    color: #13847E;
     font-family: "Bebas Neue", sans-serif;
 }
 main{
@@ -22,14 +23,24 @@ main{
 
 #container_descripcion h2{
     size: 50px;
-    padding: 50px;
+    padding-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
 }
 #container_descripcion p{
-    size: 22px;
-    padding: 100px;
-    padding: 0px;
-    padding-bottom: 50px;
-    margin: 0;
+    max-width: 800px;
+    margin-bottom: 5px;
+    margin: 50px auto;
+    padding: 0 20px;
+    text-align: left;
+    font-family: "Nunito Sans", sans-serif;
+  }
+
+h2 {
+    size: 50px;
+    padding-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
 }
 
 
