--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -28,6 +28,13 @@ main{
     padding: 0px;
 }
 
+h1 {
+  size: 50px;
+  padding-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+}
+
 #containertitulo h2{
   padding-top: 40px;
   margin-bottom: 40px;
