--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -77,6 +77,11 @@ h1 {
   margin-left: 40px;
 }
 
+#imagen_industrial, #imagen_grafico, #imagen_interaccion{
+  width: 300px;
+  height: 300px;
+}
+
 /* contenido oculto */
 .contenido {
   padding: 10px;
