--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -35,7 +35,22 @@ h1 {
   margin-left: 40px;
 }
 
+#descripcion p{
+  max-width: 800px;
+  margin-bottom: 5px;
+  margin: 50px auto;
+  padding: 0 20px;
+  text-align: left;
+  font-family: "Nunito Sans", sans-serif;
+}
+
 #containertitulo h2{
+  padding-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+}
+
+#containertitulo h3{
   padding-top: 40px;
   margin-bottom: 40px;
   margin-left: 40px;
@@ -82,6 +97,7 @@ h1 {
   height: 300px;
 }
 
+
 /* contenido oculto */
 .contenido {
   padding: 10px;
@@ -91,10 +107,17 @@ h1 {
   margin-bottom: 20px;
 }
 
+
+.contenido-oculto{
+  background-color: #A3D4D2;
+  padding-top: 67px;
+  padding-bottom: 74px;
+}
+
 #contenido-manipulacion #contenido-emocional,
  h2{
   font-size: 50;
-  margin-left: 0%;
+  margin-left: 40px;
 }
 #contenido-manipulacion p{
   font-size: 22;
@@ -102,9 +125,11 @@ h1 {
   padding-right: 30px;
   text-align: left;
   max-width: 800px;
+  margin-left: 40px;
 }
 #contenido-manipulacion h3{
   font-size: 33;
+  margin-left: 40px;
 }
 
 #contenido-manipulacion #contenido-emocional,
