--- a/footer/footer.css
+++ b/footer/footer.css
@@ -26,6 +26,20 @@ footer{
     font-size: 18px;
 }
 
+#BOTONredessociales{
+  width: 40px;
+  height: 40px;
+  margin-top: 20px;
+}
+
+#BOTONredessociales2{
+    width: 40px;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  
+
 @media (max-width: 1206px){
     .row .col-4 p{
         width: auto;
