--- a/styles.css
+++ b/styles.css
@@ -65,13 +65,34 @@ h1{
     border-radius: 20px; 
 }
 
-.rectangulopestaña {
-    width: 200px; 
-    height: 40px; 
-    background-color: #13847E;
+.contenedor {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    align-items: left;
+}
+
+.rectangulopestaña {
+    width: 200px;
+    height: 50px;
+    background-color: #13847E;
+    position: relative;
+}
+
+.rectangulopestaña::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -50px; /* Ajusta la posición del triángulo */
+    width: 0;
+    height: 0px;
+    border-style: solid;
+    border-width: 52px 0 0px 52px;
+    border-color: transparent transparent transparent #13847E;
+    transform: translateY(-50%);
+    transition: all 0.3s ease;
+}
+
+.rectangulopestaña:hover::after {
+    border-color: transparent transparent transparent #13847E; /* Cambia el color del triángulo al hacer hover */
 }
 
 #franja_1{
