--- a/css/campolaboral.css
+++ b/css/campolaboral.css
@@ -96,7 +96,8 @@ h2{
 }
 
 #cuadro_interactivo1, #cuadro_interactivo2, #cuadro_interactivo3,
-#cuadro_interactivo4, #cuadro_interactivo5, #cuadro_interactivo6, #cuadro_interactivo7
+#cuadro_interactivo4, #cuadro_interactivo5, #cuadro_interactivo6, 
+#cuadro_interactivo7, #cuadro_interactivo8, #cuadro_interactivo9
 {
   background-color: #13847E;
   width: 550px;
