--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -46,6 +46,13 @@ main{
 }
 
 /* descripcion */
+h1{
+  padding-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  size: 50px;
+}
+
 h2{
   padding-top: 40px;
   margin-bottom: 40px;
