--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -38,20 +38,54 @@ main{
     border-color: transparent transparent transparent #ffffff; /* Cambia el color del triángulo al hacer hover */
   }
 
+  h1{
+    padding-top: 40px;
+    margin-left: 40px;
+    size: 50px;
+  }
+  
+  p{
+    max-width: 800px;
+    margin-bottom: 5px;
+    margin: 50px auto;
+    padding: 0 20px;
+    text-align: left;
+    font-family: "Nunito Sans", sans-serif;
+  }
+
 #container_principal{
     min-height: 100vh;
     background-color: #ffffff;
+    flex-wrap: wrap;
     padding: 0;
     padding-bottom: 213px;
     margin-left: 80px;
     margin-right: 80px;
 }
 
-#container_principal .container{
-    padding: 50px;
+#container_descripcion h2{
+    size: 50px;
+    padding-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
+}
+ #container_descripcion1 p{
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 0 20px;
+    text-align: left;
+    font-family: "Nunito Sans", sans-serif;
 }
 
-#container_principal .container p{
-    padding: 65px;
-    size: 22;
+#container_descripcion p{
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 0 20px;
+    text-align: left;
+    font-family: "Nunito Sans", sans-serif;
 }
+
+#img_center .container-img {
+    text-align: center;
+    justify-content: center;
+ }
